commit40 - layout 잡기 및 기본 login 화면 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>main</title>
-</head>
-<body>
-    login success ~
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/default">
+
+<th:block layout:fragment="head">
+    <title>HONG SHOP</title>
+</th:block>
+
+<th:block layout:fragment="content">
+    <div class="container-sm mt-3">
+        content
+    </div>
+</th:block>
+
+
+<th:block layout:fragment="script">
+    <script>
+        console.log("script...")
+    </script>
+</th:block>
+
 </html>
