--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,16 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <th:block th:replace="fragments/head :: head"></th:block>
 </head>
+
 <body>
-  <form id="form" action="/loginProc" method="post">
-    <label for="userId">아이디</label>
-    <input type="text" id="userId" name="userId" value="test" />
+    <div class="container mt-3 d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="card col-md-6">
 
-    <label for="password">비밀번호</label>
-    <input type="password" id="password" name="password" value="1234" />
+            <form id="form" action="/loginProc" method="post">
 
-    <button type="submit">로그인</button>
-  </form>
+                <div class="card-header">
+                    <h4>로그인</h4>
+                </div>
+                <div class="card-body">
+                    <div class="mb-3 mt-3">
+                        <label for="userId">아이디</label>
+                        <input type="text" class="form-control" id="userId" name="userId" value="test" />
+                    </div>
+
+
+                    <div class="mb-3">
+                        <label for="password">비밀번호</label>
+                        <input type="text" class="form-control" id="password" name="password" value="1234" />
+                    </div>
+
+                    <div class="form-check mb-3">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" name="remember"> Remember me
+                        </label>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">로그인</button>
+                    <button type="button" class="btn btn-secondary" id="new-login">회원가입</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <th:block th:replace="fragments/script :: script"></th:block>
+    <script>
+
+        $("#new-login").click(() => {
+            console.log("click")
+        })
+
+    </script>
 </body>
 </html>
