--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -1,4 +1,5 @@
 <th:block th:fragment="script">
+    <script th:src="@{'/assets/js/jquery/jquery.min.js'}"></script>
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
-    <script th:src="@{'/assets/js/jquery/jquery.js'}"></script>
+    <script th:src="@{'/assets/js/core/util.js'}"></script>
 </th:block>
