--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -9,7 +9,8 @@
     <th:block layout:fragment="head"></th:block>
 </head>
 
-<body class="container-lg">
+<!--<body class="container-lg">-->
+<body>
     <th:block th:replace="fragments/header :: headerFragment"></th:block>
     <th:block layout:fragment="content"></th:block>
     <th:block th:replace="fragments/footer :: footer"></th:block>
