--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,5 @@
 <th:block th:fragment="footer">
-    <p>&copy; Hong Shop</p>
+    <p class="clearfix mb-0 d-flex justify-content-center">
+        <span class="mt-2">© Hong Shop</span>
+    </p>
 </th:block>
