--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,4 +1,18 @@
 <th:block th:fragment="head">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600&family=Noto+Sans+KR&display=swap">
+
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.min.css'}">
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.css'}">
+
+    <style>
+        :root {
+            --bs-font-sans-serif: 'Montserrat', 'Noto Sans KR', Helvetica, Arial, serif !important;
+        }
+
+        .header-navbar, .navigation {
+            font-family: 'Montserrat', 'Noto Sans KR', Helvetica, Arial, serif !important;
+        }
+    </style>
+
 </th:block>
