commit43 - validation 처리 및 회원 정보 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,8 +46,8 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
-                    <li><a class="dropdown-item" href="#">나의 정보</a></li>
-                    <li><a class="dropdown-item" href="#">Option 3</a></li>
+                    <li><a class="dropdown-item" href="/user/myInfo">나의 정보</a></li>
+                    <li><a class="dropdown-item" href="#">장바구니</a></li>
                 </ul>
             </div>
         </div>
