commit44 - 장바구니 화면 기초 세팅 및 'security in thymeleaf'하도록 GRADLE 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,7 +47,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
                     <li><a class="dropdown-item" href="/user/myInfo">나의 정보</a></li>
-                    <li><a class="dropdown-item" href="#">장바구니</a></li>
+                    <li><a class="dropdown-item" th:href="@{/cart/{id}(id=${#authentication.principal.user.id})}">장바구니</a></li>
                 </ul>
             </div>
         </div>
