commit48 - qna 게시판 데이터 불러와서 뿌려주기 및 버튼 클릭 이벤트

--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -34,11 +34,11 @@
                     <label>유저 권한</label>
                     <div class="input-group">
                         <div class="form-check" style="margin-right: 20px;">
-                            <input type="radio" class="form-check-input" id="ROLE_ADMIN" name="role" value="ROLE_ADMIN" th:checked="${user.role == 'ROLE_ADMIN'}">
+                            <input type="radio" class="form-check-input" id="ROLE_ADMIN" name="role" value="ROLE_ADMIN" th:checked="${user.role == 'ROLE_ADMIN'}" disabled>
                             <label class="form-check-label" for="ROLE_ADMIN">admin</label>
                         </div>
                         <div class="form-check">
-                            <input type="radio" class="form-check-input" id="ROLE_USER" name="role" value="ROLE_USER" th:checked="${user.role == 'ROLE_USER'}">
+                            <input type="radio" class="form-check-input" id="ROLE_USER" name="role" value="ROLE_USER" th:checked="${user.role == 'ROLE_USER'}" disabled>
                             <label class="form-check-label" for="ROLE_USER">user</label>
                         </div>
                     </div>
