--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="layouts/default">
 
 <th:block layout:fragment="head">
@@ -9,15 +10,110 @@
 
 <th:block layout:fragment="content">
     <div class="container-sm mt-3">
-        <h3 th:text="${type.postName}"></h3>
+        <div class="card-header" style="margin-bottom: 10px">
+            <div class="card-text d-flex justify-content-between">
+                <div class="text-start">
+                    <h3 th:text="|${type.postName}|"></h3>
+                </div>
+                <div class="text-end">
+                    <button type="button" class="btn btn-info" id="new-bbsctt">글작성하기</button>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <table class="table table-hover table-bordered" id="qna-table">
+                <thead>
+                    <tr style="text-align: center;">
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>첨부파일</th>
+                        <th>조회수</th>
+                        <th>답변여부</th>
+                        <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                            <th>답변하러가기</th>
+                        </th:block>
+                    </tr>
+                </thead>
+                <tbody id="qna-tbody"></tbody>
+            </table>
+        </div>
     </div>
 </th:block>
 
-
 <th:block layout:fragment="script">
-    <script>
-        console.log("script...")
-    </script>
+<script th:inline="javascript">
+    console.log("script...")
+
+    const type = /*[[${type}]]*/ []
+    const role = /*[[${role}]]*/ "";
+    console.log("role : ", role)
+
+    window.onload = () => {
+        getList()
+    };
+
+    const getList = () => {
+        $.ajax({
+            type: 'GET',
+            url: `/api/postsWithFileByPostType/${type['postTypeId']}`,
+            dataType: 'json',
+            contentType: 'application/json',
+            success: function (data) {
+                if(data.httpStatus === 200) setList(data);
+            },
+            error: function (xhr, status, error) {
+                console.error('Error getting password:', error);
+            }
+        });
+    }
+
+    const setList = (data) => {
+
+        const dom = $("#qna-tbody")
+        dom.empty();
+
+        const list = data.message;
+
+        list.forEach((value, i) => {
+            const fileCnt = (value.file === null) ? 0 : value.file.fileVOList.length
+            const answered = (value.answerList.length === 0) ? "N" : "Y"
+            const answerBtn = (role === 'ROLE_ADMIN') ? `<td style="width: 10%" class="text-center"><button type="button" class="btn btn-outline-info answer-btn" data-num="${value.id}">답변하기</button></></td>` : ''
+            const body =
+                `
+                    <tr>
+                        <td style="width: 10%;" class="text-center">${i+1}</td>
+                        <td style="width: 30%">${value.title}</td>
+                        <td style="width: 10%" class="text-center">${fileCnt}</td>
+                        <td style="width: 10%" class="text-center">${value.readCnt}</td>
+                        <td style="width: 10%" class="text-center">${answered}</td>
+                        ${answerBtn}
+                    </tr>
+                    `
+
+            dom.append(body)
+        })
+
+        $("tr").on("click", handleRowClick);
+        $(".answer-btn").on("click", handleBtnClick);
+    }
+
+    function handleRowClick(e) {
+        const clickedRow = e.target.closest('tr')
+        console.log("clickedRow" , clickedRow)
+    }
+
+    function handleBtnClick(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        console.log("this" , $(this))
+        console.log("value : ", $(this).attr("data-num"))
+    }
+
+    $("#new-bbsctt").on("click", function(e) {
+        console.log("new-bbsctt clicked")
+        console.log("id : ", type['postTypeId'])
+    })
+</script>
 </th:block>
 
 </html>
