--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,8 +23,8 @@
                         게시판
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                        <li><a class="dropdown-item" href="#">QNA</a></li>
-                        <li><a class="dropdown-item" href="/bbs/1">FAQ</a></li>
+                        <li><a class="dropdown-item" href="/bbs/1">QNA</a></li>
+                        <li><a class="dropdown-item" href="#">FAQ</a></li>
                         <li><a class="dropdown-item" href="#">NOTICE</a></li>
                     </ul>
                 </li>
