--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -45,8 +45,8 @@
     console.log("script...")
 
     const type = /*[[${type}]]*/ []
-    const role = /*[[${role}]]*/ "";
-    console.log("role : ", role)
+    const user = /*[[${user}]]*/ {};
+    console.log("user ", user)
 
     window.onload = () => {
         getList()
@@ -75,12 +75,12 @@
         const list = data.message;
 
         list.forEach((value, i) => {
-            const fileCnt = (value.file === null) ? 0 : value.file.fileVOList.length
+            const fileCnt = (value.file === null) ? 0 : value.file.fileList.length
             const answered = (value.answerList.length === 0) ? "N" : "Y"
-            const answerBtn = (role === 'ROLE_ADMIN') ? `<td style="width: 10%" class="text-center"><button type="button" class="btn btn-outline-info answer-btn" data-num="${value.id}">답변하기</button></></td>` : ''
+            const answerBtn = (user['role'] === 'ROLE_ADMIN') ? `<td style="width: 10%" class="text-center"><button type="button" class="btn btn-outline-info answer-btn" data-num="${value.id}">답변하기</button></></td>` : ''
             const body =
                 `
-                    <tr>
+                    <tr data-num="${value.regId}" data-value="${value.id}">
                         <td style="width: 10%;" class="text-center">${i+1}</td>
                         <td style="width: 30%">${value.title}</td>
                         <td style="width: 10%" class="text-center">${fileCnt}</td>
@@ -98,8 +98,16 @@
     }
 
     function handleRowClick(e) {
-        const clickedRow = e.target.closest('tr')
+        const clickedRow = $(e.target).closest('tr')
+        const regId = clickedRow.attr("data-num");
+        const postId = clickedRow.attr("data-value");
         console.log("clickedRow" , clickedRow)
+        console.log( "regId => ", regId);
+        console.log( "postId => ", postId);
+
+
+        if(regId != user['id']) alert("본인이 작성한 게시글에 대해서만 볼 수 있습니다.")
+        else window.location.href = `/bbs/view/${postId}`
     }
 
     function handleBtnClick(e) {
