--- a/src/main/resources/templates/bbs/qna/view.html
+++ b/src/main/resources/templates/bbs/qna/view.html
@@ -6,7 +6,7 @@
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
     <style>
-        .ck-editor__editable { height: 400px; }
+        .ck-editor__editable { height: 200px; }
         .ck-content { font-size: 12px; }
     </style>
 </th:block>
@@ -30,15 +30,21 @@
                 <input type="text" class="form-control" id="title" name="title" th:value="${post.title}"  disabled/>
             </div>
 
+            <hr class="hr" />
+
             <div class="mb-3 mt-3" style="margin-bottom: 10px;">
                 <label for="content">내용</label>
                 <div id="content" name="content" class="ckeditor" style="min-height: 300px"></div>
             </div>
 
+            <hr class="hr" />
+
             <div class="mb-3 mt-3">
-                <label for="files">파일첨부</label>
-                <div id="files"></div>
+                <label for="file-container">파일첨부</label>
+                <div class="file-container" id="file-container">
+                </div>
             </div>
+
         </div>
     </div>
 </th:block>
