--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -2,6 +2,7 @@
     <script th:src="@{'/assets/js/jquery/jquery.min.js'}"></script>
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
     <script th:src="@{'/assets/js/core/util.js'}"></script>
+    <script th:src="@{'/assets/js/feather/feather.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
 </th:block>
