--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.w3.org/1999/xhtml"
-      layout:decorate="layouts/default">
+      layout:decorate="~{layouts/default}">
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
