commit56 - 게시글 새글 작성 로직 구현

--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -120,7 +120,9 @@
     $("#new-bbsctt").on("click", function(e) {
         console.log("new-bbsctt clicked")
         console.log("id : ", type['postTypeId'])
+        window.location.href = `/bbs/save/${type['postTypeId']}`
     })
+
 </script>
 </th:block>
 
